# virtual_environment

./: .gitignore  Dockerfile  pyproject.toml  readme.md  run.py
docs/source/: about.rst.inc  api_reference.rst  conf.py  index.rst  lawen.agents.rst  lawen.envs.rst  lawen.prompts.rst  lawen.utils.rst
docs/source/_templates/: useful-links.html
lawen/: __init__.py
lawen/agents/: __init__.py  basic.py  common.py  llm.py
lawen/envs/: __init__.py  basic.py  mind2web.py  miniwob.py  webarena.py
lawen/evaluate/: __init__.py  data_process.py  evaluate_trajectory.py
lawen/prompts/: basic.py
lawen/prompts/templates/: SimpleLLMAgent.txt  baseline_agent.txt  evaluate.txt  persona_agent.txt  persona_reflection.txt  reflection.txt  reflection_agent.txt  test.txt  without_critic_agent.txt  without_plan_agent.txt
lawen/utils/: __init__.py  config.py  schema.py  types.py
tests/: test_action.py  test_env_mind2web.py  test_env_miniwob.py  test_env_webarena.py  test_logger.py  test_promt_template.py  test_schema.py
