[tool.poetry]
name = "lawen"
version = "0.2.0"
description = ""
authors = [
    "1746104160 <sjh1746104160@gmail.com>",
    "Linkseed49 <516947868@qq.com>",
    "Fizyhsp <18810777801@163.com>",
    "luol517 <luoc571@gmail.com>",
    "hqh312 <1183247000@qq.com>",
    "chacha447 <turbolxuan@163.com>"
]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.dependencies]
colorlog = "^6.7.0"
gymnasium = "0.29.0"
jinja2 = "^3.1.2"
langchain = "^0.0.312"
marshmallow = "^3.20.1"
marshmallow-dataclass = { version = "^8.6.0", extras = ["union"] }
openai = "^0.28.1"
platformdirs = ">=2.5.2,<3.0.0"
python = "^3.10"
toml = "^0.10.2"
urllib3 = "<2.0"

aiolimiter = { version = "^1.1.0", optional = true }
beartype = { version = "0.12.0", optional = true }
evaluate = { version = "^0.4.1", optional = true }
flask = { version = "^3.0.0", optional = true }
miniwob = { version = "^1.0", optional = true }
mysqlclient = { version = "^2.2.0", optional = true }
nltk = { version = "^3.8.1", optional = true }
numpy = { version = "^1.26.0", python = "<3.12", optional = true }
orjson = { version = "^3.9.8", optional = true }
playwright = { version = "1.32.1", optional = true }
psycopg2-binary = { version = "^2.9.6", optional = true }
pymongo = { version = "^4.5.0", optional = true }
pymysql = { version = "^1.0.3", optional = true }
redis = { version = "^5.0.1", optional = true }
tiktoken = { version = "^0.5.1", optional = true }
types-tqdm = { version = "^4.66.0.2", optional = true }
ujson = { version = "^5.8.0", optional = true }
webarena = { path = "webarena", develop = true, optional = true }
beautifulsoup4 = { version = "^4.12.2", optional = true }



[tool.poetry.extras]
envs = [
    "aiolimiter",
    "beautifulsoup4",
    "beartype",
    "evaluate",
    "flask",
    "miniwob",
    "nltk",
    "playwright",
    "tiktoken",
    "types-tqdm",
    "webarena",
]
miniwob = ["miniwob", "numpy"]
mind2web = ["beautifulsoup4","numpy"]
webarena = [
    "aiolimiter",
    "beartype",
    "evaluate",
    "flask",
    "nltk",
    "playwright",
    "tiktoken",
    "types-tqdm",
    "webarena",
]

orjson = ["orjson"]
ujson = ["ujson"]

mongodb = ["pymongo"]
mysql = ["mysqlclient", "pymysql"]
postgresql = ["psycopg2-binary"]
redis = ["redis"]


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
ruff = "0.1.8"
pytest = "^7.4.2"
black = "^23.9.1"
typeguard = "<4.0.0"
pytest-asyncio = "^0.23.2"
sphinx-issues = "^3.0.1"

[tool.black]
line-length = 80
target-version = ['py310']

[tool.ruff]
select = ["ALL"]
ignore = ["PLR0913"]
target-version = "py310"

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = "tests/test_env_mind2web.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.lawen]
# The default config file for lawen.
EXPIRES = 604800  # 日志过期时间(秒)
VERBOSE = true  # 是否显示详细日志
VERBOSE_LEVEL = 15  # 详细日志等级

USE_MONGO = true  # 是否使用mongo
USE_REDIS = true  # 是否使用redis
USE_SQL = true  # 是否使用sql类数据库

USE_MINIWOB = true  # 是否使用miniwob
USE_MIND2WEB = true  # 是否使用mind2web
USE_WEBARENA = true  # 是否使用webarena

SQL_DATABASE_NAME = "lawen"  # sql数据库名称
MONGO_DATABASE_NAME = "lawen"  # mongo数据库名称
REDIS_CHANNEL_NAME = "lawen"  # redis频道名称

MONGO_URI = "mongodb://localhost:27017"  # mongo地址
REDIS_URL = "redis://localhost:6379/0"  # redis地址
SQLALCHEMY_DATABASE_URI = "sqlite:///lawen.db" # sql数据库地址